update profile photo

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="home-img">
                 <div class="img-box">
-                  <img src="src\images\my-image (3).jpg" alt="moon night"">
+                  <img src="src\images\my-image.jpg" alt="moon night"">
                 </div>
 
             </div>
