modified:   index.html renamed:    src/Nanda Kishore resume.pdf -> src/images/Nanda Kishore resume.pdf

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-               <a href="src\Nanda Kishore resume.pdf" target="_blank" class="btn">download cv</a>
+               <a href="src\images\Nanda Kishore resume.pdf" target="_blank" class="btn">download cv</a>
                 
             </div>
         </div>
